--- a/myCSS.css
+++ b/myCSS.css
@@ -12,7 +12,7 @@ input {
 }       
 
 div {
-        width: 800px;
+        width: 100%;
         color: blue;
         font-size: 24px;                
         margin-bottom: 10px;
@@ -22,7 +22,7 @@ div {
 
         #findStock {
                 color: chocolate;
-                text-align: left;
+                text-align: center;
         }
 
  span {
@@ -37,4 +37,28 @@ button {
         background-color: burlywood;
         } 
 
+
+#stockTable
+{
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	width:100%;
+	border-collapse:collapse;
+}
+#stockTable td, #stockTable th 
+{
+	font-size:1em;
+	border:1px solid #98bf21;
+	padding:3px 7px 2px 7px;
+        text-align: center;
+}
+#stockTable th 
+{
+	font-size:1.1em;
+	text-align:center;
+	padding-top:5px;
+	padding-bottom:4px;
+	background-color:#A7C942;
+	color:darkgreen;
+        font-weight: bold;
+} 
            
