改變抬頭為60%

--- a/myCSS.css
+++ b/myCSS.css
@@ -14,7 +14,7 @@ input {
 div {
         width: 100%;
         color: blue;
-        font-size: 36px;                
+        font-size: 60%;                
         margin-bottom: 10px;
         text-align: left;
         font-weight: bold;
