--- a/myCSS.css
+++ b/myCSS.css
@@ -1,43 +1,74 @@
 
-body {
-        /*width: 800px; */
-        border: 1px solid #ccc;
-        padding: 10px;
-        overflow: auto;        
-        /*white-space: pre-wrap; */
-        }
-        
-input {
-        width: 50px;
-}       
-
-div {
-        width: 100%;
+.container {       
+        display: flex;
+        align-items:center;
+        font-family: 'Tangerine', serif;
+        font-size: 30px;
+        font-weight:bolder;
+        text-shadow: 4px 4px 4px rgb(200, 0, 125);
         color: blue;
-        font-size: 60%;                
+        }
+
+.buysell{
+        display:flex;
+        align-items: center;
+}        
+.buysell span input{
+        width: 50px;               
+}
+.buysell span label{
+        font-size: 12px;
+        color: red;
+        font-weight: bold;
+}
+.container span{
+        font-size:13px;
+
+        color: black;       
+        }        
+
+
+/*body {*/
+        /*width: 800px; */
+        /*border: 1px solid #ccc;*/
+        /*padding: 10px;*/
+        /*overflow: auto;        */
+        /*white-space: pre-wrap; */
+        /*}*/
+        
+/*input {
+        width: 50px;
+} */      
+
+/*
+div {
+        width: 60%;
+        color: blue;
+        font-size: 100%;                
         margin-bottom: 10px;
         text-align: left;
         font-weight: bold;
         }
-
-.container { 
-        display: flex; 
-        align-items: center;  
-        } 
-img { 
-        margin-right: 10px; 
+        */
+img {   
+        margin-right: 10px;                 
     } 
+/*
+.text {
+        margin-top: 10px;        
+} 
+        */   
 
-        #findStock {
-                color: chocolate;
-                text-align: center;
-        }
-
- span {
+#findStock {
+     color: chocolate;
+     text-align: center;
+}
+/*
+span {
         color: brown;
         font-size: 16px;
  }       
-
+*/
 button {
         margin-top: 8px;
         padding: 0.3em;
@@ -47,20 +78,26 @@ button {
         } 
 
 
-#stockTable
+table
 {
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	width:100%;
 	border-collapse:collapse;
-}
-#stockTable td, #stockTable th 
-{
-	font-size:1em;
+
+        font-size:1em;
 	border:1px solid #98bf21;
 	padding:3px 7px 2px 7px;
         text-align: center;
+        
 }
-#stockTable th 
+#stockTbody td
+{
+	font-size:1em;
+	border:1px solid #A7C942;
+	padding:3px 7px 2px 7px;
+        text-align: center;
+}
+#stockTable
 {
 	font-size:1.1em;
 	text-align:center;
