--- a/myCSS.css
+++ b/myCSS.css
@@ -10,96 +10,72 @@
         }
 
 .buysell{
-        display:flex;
+        /*display:flex;*/
         align-items: center;
 }        
 .buysell span input{
-        width: 50px;               
+        width: 70px;
+        align-content: center;
 }
 .buysell span label{
         font-size: 12px;
         color: red;
         font-weight: bold;
 }
-.container span{
+.container span{        
         font-size:13px;
-
         color: black;       
-        }        
+        }              
 
-
-/*body {*/
-        /*width: 800px; */
-        /*border: 1px solid #ccc;*/
-        /*padding: 10px;*/
-        /*overflow: auto;        */
-        /*white-space: pre-wrap; */
-        /*}*/
-        
-/*input {
-        width: 50px;
-} */      
-
-/*
-div {
-        width: 60%;
-        color: blue;
-        font-size: 100%;                
-        margin-bottom: 10px;
-        text-align: left;
-        font-weight: bold;
-        }
-        */
 img {   
         margin-right: 10px;                 
     } 
-/*
-.text {
-        margin-top: 10px;        
-} 
-        */   
+
 
 #findStock {
      color: chocolate;
      text-align: center;
 }
-/*
-span {
-        color: brown;
-        font-size: 16px;
- }       
-*/
-button {
-        margin-top: 8px;
-        padding: 0.3em;
-        border-color:chocolate;
-        border-radius: 0.3em;
-        background-color: burlywood;
-        } 
 
 
-table
-{
-	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-	width:100%;
-	border-collapse:collapse;
 
-        font-size:1em;
-	border:1px solid #98bf21;
-	padding:3px 7px 2px 7px;
-        text-align: center;
-        
-}
+    .btn-group button {        
+                background-color:orange; /* Green background */
+                border: 1px solid rgb(69, 30, 210); /* Green border */
+                color: rgb(111, 0, 255); /* White text */
+                padding: 10px 24px; /* Some padding */
+                cursor: pointer; /* Pointer/hand icon */
+                float:left ; /* Float the buttons side by side */
+                font-weight: bold;
+                               
+            }
+        /* Clear floats (clearfix hack) */
+    .btn-group:after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    .btn-group button:not(:last-child) {
+        border-right: none; /* Prevent double borders */
+    }
+    
+    /* Add a background color on hover */
+    .btn-group button:hover {
+        background-color: #3e8e41;
+    }
+    
+
 #stockTbody td
 {
-	font-size:1em;
+	font: size 10px;
 	border:1px solid #A7C942;
 	padding:3px 7px 2px 7px;
         text-align: center;
 }
 #stockTable
 {
-	font-size:1.1em;
+        width: 100%;
+	font-size:12px;
 	text-align:center;
 	padding-top:5px;
 	padding-bottom:4px;
